--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -45,81 +45,85 @@
         <td>{{PI}}</td>
         <td>number:'3.0-0'</td>
         <td>{{PI | number:'3.0-0'}}</td> 
-        <!-- toma el arreglo desde el primero  hasta el 5 -->
       </tr>
       <tr>
         <td>{{PI}}</td>
         <td>number:'1.0-2'</td>
         <td>{{PI | number:'1.0-2'}}</td> 
-        <!-- toma el arreglo desde el primero  hasta el 5 -->
       </tr>
       <tr>
         <td>{{a}}</td>
         <td>percent</td>
         <td>{{a | percent:'2.2-2'}}</td> 
-        <!-- toma el arreglo desde el primero  hasta el 5 -->
       </tr>
       <tr>
         <td>{{a}}</td>
         <td>percent</td>
         <td>{{a | percent:'2.2-2'}}</td> 
-        <!-- toma el arreglo desde el primero  hasta el 5 -->
       </tr>
       <tr>
         <td>{{salario}}</td>
         <td>currency</td>
         <td>{{salario | currency}}</td> 
-        <!-- toma el arreglo desde el primero  hasta el 5 -->
       </tr>
       <tr>
         <td>{{salario}}</td>
         <td>currency:'EUR'</td>
         <td>{{salario | currency:'EUR'}}</td> 
-        <!-- toma el arreglo desde el primero  hasta el 5 -->
       </tr>
       <tr>
         <td>{{salario}}</td>
         <td>currency:'EUR':'code'</td>
         <td>{{salario | currency:'EUR':'code'}}</td> 
-        <!-- toma el arreglo desde el primero  hasta el 5 -->
       </tr>
       <tr>
         <td>{{salario}}</td>
         <td>currency:'EUR':'4.0-0'</td>
         <td>{{salario | currency:'EUR':true:'4.0-0'}}</td> 
-        <!-- toma el arreglo desde el primero  hasta el 5 -->
       </tr>
       <tr>
         <td>{{salario}}</td>
         <td>number:'.2-2'</td>
         <td>{{salario | number:'.2-2'}}</td> 
-        <!-- toma el arreglo desde el primero  hasta el 5 -->
       </tr>
       <tr>
         <td>{{valorDePromesa}}</td>
         <td>async</td>
         <td>{{valorDePromesa | async}}</td> 
-        <!-- toma el arreglo desde el primero  hasta el 5 -->
       </tr>
       <tr>
         <td>{{fecha}}</td>
         <td>date</td>
         <td>{{fecha | date}}</td> 
-        <!-- toma el arreglo desde el primero  hasta el 5 -->
       </tr>
       <tr>
         <td>{{fecha}}</td>
         <td>date:'medium'</td>
         <td>{{fecha | date:'medium'}}</td> 
-        <!-- toma el arreglo desde el primero  hasta el 5 -->
       </tr>
       <tr>
         <td>{{fecha}}</td>
-        <td>date:'MMM - DD'</td>
-        <td>{{fecha | date:'MMM - DD'}}</td> 
-        <!-- toma el arreglo desde el primero  hasta el 5 -->
+        <td>date:'MMMM - DD'</td>
+        <td>{{fecha | date:'MMMM - dd'}}</td> 
       </tr>
-      
+      <tr>
+        <td>{{nombre2}}</td>
+        <td>capitalizado</td>
+        <td>{{nombre2 | capitalizado}}</td> 
+      </tr>
+      <tr>
+        <td>{{nombre2}}</td>
+        <td>capitalizado</td>
+        <td>{{nombre2 | capitalizado:false}}</td> 
+      </tr>  
+      <tr>
+        <td>{{nombre}}</td>
+        <td>contrasena: {{ activar }}
+          <br>
+          <button (click)="activar = !activar" type="button" class="btn btn-outline-primary"> Activar/desactivar</button>
+        </td>
+        <td>{{nombre | contrasena:activar}}</td> 
+      </tr>     
     </tbody>
   </table>
   <h4>Slice</h4>
@@ -129,6 +133,9 @@
 <h4>JSON</h4>
 <pre>{{heroe | json}}</pre>
 
+<h4>Youtube <small>video</small></h4>
+<hr>
+<iframe width="560" height="315" [src]="video | domseguro: 'https://www.youtube.com/embed/'" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </div>
 
 <br><br><br><br><br><br><br>
